server/src/compiler_parser/parser.ts
// Hand-written recursive-descent parser for Enma.
// Input: PreprocessedOutput.preprocessedTokens (post-expansion, conditionals resolved, comments stripped).
// Output: { ast: NodeScript, diagnostics: Diagnostic[] } with partial AST and Continue-on-error recovery.
//
// Grammar source of truth: server/bnf.txt
// Reference shape ported from angel-lsp parser.ts (recursive-descent harness only;
// Enma-specific productions rebuilt from scratch).
//
// §A1 incremental strategy is exposed via parserCache.ts — this file accepts an optional
// cache to reuse top-level subtrees keyed by FNV-1a hash of the decl's token-text.
//
// §A3 multi-inheritance: bases captured in order on Class/Struct/Interface; analyzer (Phase 4)
// computes C3 linearization.

import { TextRange } from '../compiler_tokenizer/textLocation';
import {
    TokenObject,
    TokenKind,
    TokenIdentifier,
    TokenReserved,
    TokenString,
    TokenNumber,
    TokenChar,
    TokenFStringText,
} from '../compiler_tokenizer/tokenObject';
import { isPrimitive } from '../compiler_tokenizer/reservedWord';
import { Diagnostic, PreprocessedOutput } from './parserPreprocess';
import { ParserState, ParseRecoveryError } from './parserState';
import {
    NodeKind,
    NodeScript,
    NodeTopLevel,
    NodeImport,
    NodeNamespace,
    NodeUsing,
    NodeTypedef,
    NodeTemplate,
    NodeMixin,
    NodeDelegate,
    NodeProperty,
    NodeOperatorOverload,
    NodeClass,
    NodeStruct,
    NodeInterface,
    NodeEnum,
    NodeEnumValue,
    NodeFunction,
    NodeMethod,
    NodeConstructor,
    NodeDestructor,
    NodeCoroutine,
    NodeVar,
    NodeField,
    NodeParam,
    NodeTemplateParam,
    NodeMember,
    NodeAnnotation,
    NodeType,
    NodeStmt,
    NodeStmtBlock,
    NodeStmtIf,
    NodeStmtFor,
    NodeStmtForeach,
    NodeStmtWhile,
    NodeStmtDoWhile,
    NodeStmtSwitch,
    NodeStmtTry,
    NodeStmtThrow,
    NodeStmtDefer,
    NodeStmtYield,
    NodeStmtVar,
    NodeStmtExpr,
    NodeStmtEmpty,
    NodeStmtReturn,
    NodeStmtBreak,
    NodeStmtContinue,
    NodeStmtGoto,
    NodeStmtLabel,
    NodeExpr,
    NodeExprBinary,
    NodeExprUnary,
    NodeExprPostfix,
    NodeExprTernary,
    NodeExprAssign,
    NodeExprCall,
    NodeExprMemberDot,
    NodeExprMemberArrow,
    NodeExprNamespaceAccess,
    NodeExprIndex,
    NodeExprCast,
    NodeExprNew,
    NodeExprDelete,
    NodeExprSizeof,
    NodeExprOffsetof,
    NodeExprStaticAssert,
    NodeExprFuncRef,
    NodeExprIntrinsic,
    NodeExprIdentifier,
    NodeExprThis,
    NodeExprParen,
    NodeExprLambdaBracket,
    NodeExprLambdaArrow,
    NodeExprDesignatedInit,
    NodeExprArrayInit,
    NodeExprMatch,
    NodeMatchArm,
    NodeExprLiteralInt,
    NodeExprLiteralFloat,
    NodeExprLiteralString,
    NodeExprLiteralChar,
    NodeExprLiteralBool,
    NodeExprLiteralNull,
    NodeExprLiteralUserDefined,
    NodeExprFString,
    NodeFStringPart,
    NodeLambdaCapture,
    NodeDesignatedInitField,
} from './nodes';
import {
    ParserCache,
    findTopLevelBoundaries,
    hashTokenRange,
} from './parserCache';

export interface ParseResult {
    readonly ast: NodeScript;
    readonly diagnostics: Diagnostic[];
}

export interface ParseOptions {
    readonly fileUri?: string;
    readonly cache?: ParserCache;
}

// ---- Public entry ----

export function parseAfterPreprocessed(
    preprocessed: PreprocessedOutput,
    options: ParseOptions = {},
): ParseResult {
    const tokens = preprocessed.preprocessedTokens;
    const fileUri = options.fileUri ?? deriveUriFromTokens(tokens);
    const cache = options.cache;

    // Pre-pass: locate top-level boundaries for §A1 cache reuse.
    const boundaries = findTopLevelBoundaries(tokens);
    const cachedNodes = new Map<number, NodeTopLevel>();   // boundary-index → cached node
    if (cache) {
        boundaries.forEach((b, idx) => {
            const [start, end] = b;
            const h = hashTokenRange(tokens, start, end);
            const hit = cache.get(fileUri, h);
            if (hit) cachedNodes.set(idx, hit.node);
        });
    }

    const state = new ParserState(tokens, fileUri);
    const parser = new Parser(state, preprocessed);
    const script = parser.parseScript();

    // Update cache with newly produced top-level nodes (best-effort: re-hash boundaries
    // and store the corresponding parsed children where index alignment holds).
    if (cache) {
        const fresh: Array<{ hash: number; node: NodeTopLevel; tokenStart: number; tokenEnd: number }> = [];
        for (let i = 0; i < boundaries.length && i < script.children.length; i++) {
            const [start, end] = boundaries[i];
            fresh.push({
                hash: hashTokenRange(tokens, start, end),
                node: script.children[i],
                tokenStart: start,
                tokenEnd: end,
            });
        }
        cache.replaceFile(fileUri, fresh);
    }

    return {
        ast: script,
        diagnostics: [...preprocessed.diagnostics, ...state.diagnostics],
    };
}

function deriveUriFromTokens(tokens: ReadonlyArray<TokenObject>): string {
    return tokens.find(t => t.location?.uri)?.location.uri ?? 'file:///unknown';
}

// ---- Parser body ----

const ASSIGN_OPS = new Set(['=', '+=', '-=', '*=', '/=', '%=', '<<=', '>>=', '&=', '|=', '^=']);

const MODIFIERS = new Set([
    'static', 'const', 'constexpr', 'inline', 'override',
    'public', 'private', 'volatile',
]);

const TYPE_PREFIX_KW = new Set(['const', 'nullable']);

const CAST_KEYWORDS = new Set(['cast', 'static_cast', 'reinterpret_cast', 'const_cast']);

const INTRINSIC_NAMES = new Set([
    '__va_count', '__va_arg',
    '__asm_rdtsc', '__asm_pause', '__asm_mfence', '__asm_nop',
]);

// Reserved words that may appear as plain identifiers in expression / declarator
// position (contextual keywords). Conservative list. Used as a relaxation for the
// parser when the surrounding grammar is unambiguous.
const CONTEXTUAL_AS_IDENT = new Set([
    'get', 'set',
    // `out` is a parameter modifier (per Enma docs), but appears as a normal
    // identifier in declaration / variable / expression / return positions.
    // Treat it contextually like get/set: accept as an identifier outside the
    // parameter-modifier slot.
    'out',
]);

class Parser {
    private currentClassName: string | null = null;          // for ctor/dtor recognition
    constructor(
        private readonly s: ParserState,
        private readonly pre: PreprocessedOutput,
    ) {
        void this.pre;
    }

    // BNF: Script ::= { TopLevel }
    parseScript(): NodeScript {
        const startTok = this.s.peek();
        const children: NodeTopLevel[] = [];
        while (!this.s.isEOF) {
            const before = this.s.pos;
            try {
                const decl = this.parseTopLevel();
                if (decl) children.push(decl);
                // If null, the failing parser already called panicRecover internally.
            } catch (e) {
                if (e instanceof ParseRecoveryError) {
                    this.s.panicRecover();
                } else {
                    throw e;
                }
            }
            // Guard against infinite loop on stuck tokens.
            if (this.s.pos === before) this.s.advance();
        }
        const range: TextRange = startTok
            ? { start: startTok.location.start, end: this.s.prev()?.location.end ?? startTok.location.end }
            : { start: { line: 0, character: 0 }, end: { line: 0, character: 0 } };
        return { kind: NodeKind.Script, range, children };
    }

    // BNF: TopLevel ::= Annotations TopLevelInner
    private parseTopLevel(): NodeTopLevel | null {
        const annotations = this.parseAnnotations();

        const t = this.s.peek();
        if (!t) return null;

        // import "..."
        if (this.isReserved(t, 'import')) return this.parseImport();
        if (this.isReserved(t, 'namespace')) return this.parseNamespace();
        if (this.isReserved(t, 'using')) return this.parseUsing();
        if (this.isReserved(t, 'typedef')) return this.parseTypedef();
        if (this.isReserved(t, 'template')) return this.parseTemplate();
        if (this.isReserved(t, 'mixin')) return this.parseMixin(annotations);
        if (this.isReserved(t, 'delegate')) return this.parseDelegate();
        if (this.isReserved(t, 'class')) return this.parseClass(annotations);
        if (this.isReserved(t, 'struct')) return this.parseStruct(annotations);
        if (this.isReserved(t, 'interface')) return this.parseInterface(annotations);
        if (this.isReserved(t, 'enum')) return this.parseEnum(annotations);
        if (this.isReserved(t, 'extern')) return this.parseExternDecl(annotations);
        if (this.isReserved(t, 'coroutine')) return this.parseCoroutine(annotations);

        // Otherwise: function or variable declaration.
        return this.parseFunctionOrVar(annotations);
    }

    // BNF: Annotations ::= { Annotation }
    private parseAnnotations(): NodeAnnotation[] {
        const result: NodeAnnotation[] = [];
        while (this.s.check(TokenKind.AnnotationOpen)) {
            const ann = this.parseAnnotation();
            if (ann) result.push(ann);
        }
        return result;
    }

    // BNF: Annotation ::= '[[' <ID-or-KW> [ '(' [ ExprList ] ')' ] ']]'
    private parseAnnotation(): NodeAnnotation | null {
        const open = this.s.advance(); // '[['
        if (!open) return null;
        const nameTok = this.s.peek();
        if (!nameTok || (nameTok.kind !== TokenKind.Identifier && nameTok.kind !== TokenKind.Reserved)) {
            this.s.error('expected annotation name', nameTok?.location ?? open.location);
            this.s.skipUntilBalancedClose(']]');
            return null;
        }
        this.s.advance();
        const args: NodeExpr[] = [];
        if (this.s.matchPunct('(')) {
            if (!this.s.check(TokenKind.Punctuation, ')')) {
                this.parseExprListInto(args);
            }
            this.s.expectPunct(')', `expected ')' after annotation args`);
        }
        const close = this.s.expect(TokenKind.AnnotationClose, undefined, `expected ']]' after annotation`);
        const range: TextRange = {
            start: open.location.start,
            end: (close ?? this.s.prev() ?? open).location.end,
        };
        return {
            kind: NodeKind.Annotation,
            range,
            name: nameTok as TokenIdentifier | TokenReserved,
            args,
        };
    }

    // BNF: Import ::= 'import' STRING ';'
    private parseImport(): NodeImport | null {
        const kw = this.s.advance()!; // 'import'
        const pathTok = this.s.peek();
        if (!pathTok || pathTok.kind !== TokenKind.String) {
            this.s.error(`expected string literal after 'import'`, pathTok?.location ?? kw.location);
            this.s.panicRecover();
            return null;
        }
        this.s.advance();
        this.s.expectPunct(';', `expected ';' after import path`);
        return {
            kind: NodeKind.Import,
            range: this.s.rangeFromTokens(kw),
            path: pathTok as TokenString,
        };
    }

    // BNF: Namespace ::= 'namespace' <ID> '{' { TopLevel } '}'
    private parseNamespace(): NodeNamespace | null {
        const kw = this.s.advance()!;
        const name = this.s.expectIdentifier(`expected namespace name`);
        if (!name) { this.s.panicRecover(); return null; }
        this.s.expectPunct('{', `expected '{' after namespace name`);
        const children: NodeTopLevel[] = [];
        while (!this.s.isEOF && !this.s.check(TokenKind.Punctuation, '}')) {
            const before = this.s.pos;
            try {
                const c = this.parseTopLevel();
                if (c) children.push(c);
                // If null, the failing parser already called panicRecover internally.
            } catch (e) {
                if (e instanceof ParseRecoveryError) this.s.panicRecover(); else throw e;
            }
            if (this.s.pos === before) this.s.advance();
        }
        this.s.expectPunct('}', `expected '}' to close namespace`);
        return {
            kind: NodeKind.Namespace,
            range: this.s.rangeFromTokens(kw),
            name: name as TokenIdentifier,
            children,
        };
    }

    // BNF: Using ::= 'using' 'namespace' QualifiedName ';' | 'using' <ID> '=' Type ';'
    private parseUsing(): NodeUsing | null {
        const kw = this.s.advance()!;
        if (this.s.matchReserved('namespace')) {
            const path = this.parseQualifiedName();
            this.s.expectPunct(';', `expected ';' after using-namespace`);
            return {
                kind: NodeKind.Using,
                range: this.s.rangeFromTokens(kw),
                isNamespace: true,
                path,
                alias: null,
                aliasTarget: null,
            };
        }
        const aliasTok = this.s.expectIdentifier(`expected identifier after 'using'`);
        if (!aliasTok) { this.s.panicRecover(); return null; }
        this.s.expectOp('=', `expected '=' in using alias`);
        const target = this.parseType();
        this.s.expectPunct(';', `expected ';' after using alias`);
        return {
            kind: NodeKind.Using,
            range: this.s.rangeFromTokens(kw),
            isNamespace: false,
            path: [],
            alias: aliasTok as TokenIdentifier,
            aliasTarget: target,
        };
    }

    // BNF: Typedef ::= 'typedef' Type <ID> ';'
    private parseTypedef(): NodeTypedef | null {
        const kw = this.s.advance()!;
        const underlying = this.parseType();
        const name = this.s.expectIdentifier(`expected typedef name`);
        if (!name) { this.s.panicRecover(); return null; }
        this.s.expectPunct(';', `expected ';' after typedef`);
        return {
            kind: NodeKind.Typedef,
            range: this.s.rangeFromTokens(kw),
            underlying,
            name: name as TokenIdentifier,
        };
    }

    // BNF: Template ::= 'template' '<' TemplateParamList '>' TopLevelInner
    private parseTemplate(): NodeTemplate | null {
        const kw = this.s.advance()!;
        if (!this.s.matchOp('<')) {
            this.s.error(`expected '<' after 'template'`, this.s.peek()?.location ?? kw.location);
            this.s.panicRecover();
            return null;
        }
        const params = this.parseTemplateParamList();
        if (!this.s.matchOp('>')) {
            this.s.error(`expected '>' after template params`, this.s.peek()?.location ?? kw.location);
        }
        const annotations = this.parseAnnotations();
        const body = this.parseTopLevelInnerForTemplate(annotations);
        if (!body) return null;
        return {
            kind: NodeKind.Template,
            range: this.s.rangeFromTokens(kw),
            params,
            body,
        };
    }

    private parseTopLevelInnerForTemplate(annotations: NodeAnnotation[]): NodeTopLevel | null {
        const t = this.s.peek();
        if (!t) return null;
        if (this.isReserved(t, 'class')) return this.parseClass(annotations);
        if (this.isReserved(t, 'struct')) return this.parseStruct(annotations);
        if (this.isReserved(t, 'interface')) return this.parseInterface(annotations);
        // function template.
        return this.parseFunctionOrVar(annotations);
    }

    private parseTemplateParamList(): NodeTemplateParam[] {
        const params: NodeTemplateParam[] = [];
        if (this.s.checkText('>')) return params;
        do {
            const startTok = this.s.peek();
            if (!startTok) break;
            let keyword: TokenReserved | null = null;
            if (this.s.check(TokenKind.Reserved, 'typename')) {
                keyword = this.s.advance() as TokenReserved;
            }
            const nameTok = this.s.expectIdentifier(`expected template parameter name`);
            if (!nameTok) break;
            let defaultType: NodeType | null = null;
            if (this.s.matchOp('=')) {
                defaultType = this.parseType();
            }
            const range: TextRange = {
                start: startTok.location.start,
                end: this.s.prev()?.location.end ?? startTok.location.end,
            };
            params.push({
                kind: NodeKind.TemplateParam,
                range,
                keyword,
                name: nameTok as TokenIdentifier,
                defaultType,
            });
        } while (this.s.matchOp(','));
        return params;
    }

    // BNF: Mixin ::= 'mixin' <ID> [ ':' BaseList ] '{' { Member } '}'
    private parseMixin(_annotations: NodeAnnotation[]): NodeMixin | null {
        void _annotations;
        const kw = this.s.advance()!;
        const name = this.s.expectIdentifier(`expected mixin name`);
        if (!name) { this.s.panicRecover(); return null; }
        const bases = this.s.matchOp(':') ? this.parseBaseList() : [];
        this.s.expectPunct('{', `expected '{' after mixin name`);
        const members = this.parseMemberList(name.text);
        this.s.expectPunct('}', `expected '}' to close mixin`);
        return {
            kind: NodeKind.Mixin,
            range: this.s.rangeFromTokens(kw),
            name: name as TokenIdentifier,
            bases,
            members,
        };
    }

    // BNF: Delegate ::= 'delegate' Type <ID> '(' [ ParamList ] ')' ';'
    private parseDelegate(): NodeDelegate | null {
        const kw = this.s.advance()!;
        const returnType = this.parseType();
        const name = this.s.expectIdentifier(`expected delegate name`);
        if (!name) { this.s.panicRecover(); return null; }
        this.s.expectPunct('(', `expected '(' after delegate name`);
        const params = this.parseParamList();
        this.s.expectPunct(')', `expected ')' after delegate params`);
        this.s.expectPunct(';', `expected ';' after delegate`);
        return {
            kind: NodeKind.Delegate,
            range: this.s.rangeFromTokens(kw),
            returnType,
            name: name as TokenIdentifier,
            params,
        };
    }

    // BNF: Class / Struct / Interface (all share shape; differ only in keyword)
    private parseClass(annotations: NodeAnnotation[]): NodeClass | null {
        return this.parseClassLikeAs(NodeKind.Class, annotations) as NodeClass | null;
    }
    private parseStruct(annotations: NodeAnnotation[]): NodeStruct | null {
        return this.parseClassLikeAs(NodeKind.Struct, annotations) as NodeStruct | null;
    }
    private parseInterface(annotations: NodeAnnotation[]): NodeInterface | null {
        return this.parseClassLikeAs(NodeKind.Interface, annotations) as NodeInterface | null;
    }
    private parseClassLikeAs(
        kind: NodeKind.Class | NodeKind.Struct | NodeKind.Interface,
        annotations: NodeAnnotation[],
    ): NodeClass | NodeStruct | NodeInterface | null {
        const kw = this.s.advance()!;
        const name = this.s.expectIdentifier(`expected ${kind} name`);
        if (!name) { this.s.panicRecover(); return null; }
        const bases = this.s.matchOp(':') ? this.parseBaseList() : [];
        this.s.expectPunct('{', `expected '{' after ${kind} name`);
        const prevClass = this.currentClassName;
        this.currentClassName = name.text;
        const members = this.parseMemberList(name.text);
        this.currentClassName = prevClass;
        this.s.expectPunct('}', `expected '}' to close ${kind}`);
        const range = this.s.rangeFromTokens(kw);
        // Build the proper variant — readonly arrays so declaration form is consistent.
        if (kind === NodeKind.Class) {
            return {
                kind: NodeKind.Class,
                range,
                name: name as TokenIdentifier,
                bases,
                annotations,
                members,
            };
        }
        if (kind === NodeKind.Struct) {
            return {
                kind: NodeKind.Struct,
                range,
                name: name as TokenIdentifier,
                bases,
                annotations,
                members,
            };
        }
        return {
            kind: NodeKind.Interface,
            range,
            name: name as TokenIdentifier,
            bases,
            annotations,
            members,
        };
    }

    private parseBaseList(): NodeType[] {
        const bases: NodeType[] = [];
        do {
            // Each base is just a Type. (No access modifiers in Enma per §A3.)
            // However we want to stop at `{` even on parse error; parseType handles common case.
            if (this.s.check(TokenKind.Punctuation, '{')) break;
            bases.push(this.parseType());
        } while (this.s.matchOp(','));
        return bases;
    }

    // BNF: Enum ::= 'enum' <ID> [ ':' Type ] '{' EnumValueList [ ',' ] '}'
    private parseEnum(annotations: NodeAnnotation[]): NodeEnum | null {
        const kw = this.s.advance()!;
        const name = this.s.expectIdentifier(`expected enum name`);
        if (!name) { this.s.panicRecover(); return null; }
        let underlying: NodeType | null = null;
        if (this.s.matchOp(':')) underlying = this.parseType();
        this.s.expectPunct('{', `expected '{' after enum name`);
        const values: NodeEnumValue[] = [];
        while (!this.s.isEOF && !this.s.check(TokenKind.Punctuation, '}')) {
            const valStart = this.s.peek();
            if (!valStart) break;
            const vname = this.s.expectIdentifier(`expected enum value name`);
            if (!vname) { if (!this.advanceUntilCommaOrBrace()) break; continue; }
            let value: NodeExpr | null = null;
            if (this.s.matchOp('=')) value = this.parseExpr();
            const range: TextRange = {
                start: valStart.location.start,
                end: this.s.prev()?.location.end ?? valStart.location.end,
            };
            values.push({
                kind: NodeKind.EnumValue,
                range,
                name: vname as TokenIdentifier,
                value,
            });
            if (!this.s.matchOp(',')) break;
        }
        this.s.expectPunct('}', `expected '}' to close enum`);
        return {
            kind: NodeKind.Enum,
            range: this.s.rangeFromTokens(kw),
            name: name as TokenIdentifier,
            underlying,
            annotations,
            values,
        };
    }

    private advanceUntilCommaOrBrace(): boolean {
        while (!this.s.isEOF) {
            const t = this.s.peek()!;
            if (t.kind === TokenKind.Operator && t.text === ',') { this.s.advance(); return true; }
            if (t.kind === TokenKind.Punctuation && t.text === '}') return true;
            this.s.advance();
        }
        return false;
    }

    // BNF: ExternDecl ::= 'extern' Type <ID> '(' [ ParamList ] ')' ';'
    private parseExternDecl(annotations: NodeAnnotation[]): NodeFunction | null {
        const kw = this.s.advance()!;
        const returnType = this.parseType();
        const name = this.s.expectIdentifier(`expected extern function name`);
        if (!name) { this.s.panicRecover(); return null; }
        this.s.expectPunct('(', `expected '(' after extern function name`);
        const params = this.parseParamList();
        this.s.expectPunct(')', `expected ')' after extern params`);
        this.s.expectPunct(';', `expected ';' after extern decl`);
        return {
            kind: NodeKind.Function,
            range: this.s.rangeFromTokens(kw),
            returnType,
            name: name as TokenIdentifier,
            params,
            body: null,
            annotations,
            modifiers: [],
            templateParams: [],
            isExtern: true,
        };
    }

    // BNF: Coroutine ::= 'coroutine' Type <ID> '(' [ ParamList ] ')' Block
    private parseCoroutine(annotations: NodeAnnotation[]): NodeCoroutine | null {
        const kw = this.s.advance()!;
        const returnType = this.parseType();
        const name = this.s.expectIdentifier(`expected coroutine name`);
        if (!name) { this.s.panicRecover(); return null; }
        this.s.expectPunct('(', `expected '(' after coroutine name`);
        const params = this.parseParamList();
        this.s.expectPunct(')', `expected ')' after coroutine params`);
        const body = this.parseBlock();
        return {
            kind: NodeKind.Coroutine,
            range: this.s.rangeFromTokens(kw),
            returnType,
            name: name as TokenIdentifier,
            params,
            body,
            annotations,
        };
    }

    // BNF: FunctionOrVar ::= Modifier* Type <ID> ( FunctionTail | VarTail )
    private parseFunctionOrVar(annotations: NodeAnnotation[]): NodeFunction | NodeVar | null {
        const startTok = this.s.peek();
        if (!startTok) return null;

        const modifiers = this.parseModifiers();
